[Setup] Setup table for games

--- a/resources/angular/src/app/pages/games-index/games-index.component.html
+++ b/resources/angular/src/app/pages/games-index/games-index.component.html
@@ -1,1 +1,33 @@
-<p>games-index works!</p>
+<mat-card class="mat-elevation-z12">
+    <mat-card-header>
+        <mat-card-title>Games</mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+        <mat-table [dataSource]="[{'configuration':'test', 'numOfPlayers':'1', 'maxNumOfPlayers': 2, 'actions':''}]">
+            <ng-container matColumnDef="configuration">
+                <mat-header-cell *matHeaderCellDef>Configuration</mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{ element.configuration }}
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="players">
+                <mat-header-cell *matHeaderCellDef>Players</mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{ element.numOfPlayers }} / {{ element.maxNumOfPlayers }}
+                </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+                <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <button mat-stroked-button>Join</button>
+                </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="['configuration', 'players', 'actions']"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: ['configuration', 'players', 'actions']"></mat-row>
+        </mat-table>
+    </mat-card-content>
+</mat-card>
