--- a/resources/angular/src/app/pages/games-index/games-index.component.html
+++ b/resources/angular/src/app/pages/games-index/games-index.component.html
@@ -1,21 +1,21 @@
-<mat-card class="mat-elevation-z12">
+<mat-card class="mat-elevation-z24">
     <mat-card-header>
         <mat-card-title>Games</mat-card-title>
     </mat-card-header>
 
     <mat-card-content>
-        <mat-table [dataSource]="[{'configuration':'test', 'numOfPlayers':'1', 'maxNumOfPlayers': 2, 'actions':''}]">
+        <mat-table [dataSource]="games">
             <ng-container matColumnDef="configuration">
                 <mat-header-cell *matHeaderCellDef>Configuration</mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    {{ element.configuration }}
+                <mat-cell *matCellDef="let game">
+                    {{ game.configuration.name }}
                 </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="players">
                 <mat-header-cell *matHeaderCellDef>Players</mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    {{ element.numOfPlayers }} / {{ element.maxNumOfPlayers }}
+                <mat-cell *matCellDef="let game">
+                    {{ game.submarines.length }} / {{ game.configuration.maxNumOfPlayers }}
                 </mat-cell>
             </ng-container>
 
