[Update] Improve games index layout, add button to create game

--- a/resources/angular/src/app/app.component.html
+++ b/resources/angular/src/app/app.component.html
@@ -1,3 +1,6 @@
+<mat-toolbar color="primary">
+    <span>Deeplomacy</span>
+</mat-toolbar>
 <div class="layout">
     <router-outlet></router-outlet>
 </div>
