--- a/resources/angular/src/app/pages/games-index/games-index.component.scss
+++ b/resources/angular/src/app/pages/games-index/games-index.component.scss
@@ -1,3 +1,9 @@
-.mat-table {
-    margin-bottom: 1em;
+mat-card {
+    max-width: 50em;
+    margin-left: auto;
+    margin-right: auto;
+
+    .mat-table {
+        margin-bottom: 1em;
+    }
 }
