[Feature] Make create game form working

--- a/resources/angular/src/app/components/create-game-form/create-game-form.component.html
+++ b/resources/angular/src/app/components/create-game-form/create-game-form.component.html
@@ -1,24 +1,32 @@
 <mat-card class="mat-elevation-z10">
     <mat-card-content>
-        <mat-expansion-panel class="mat-elevation-z0">
-            <mat-expansion-panel-header>
-                <mat-panel-title>Create new game</mat-panel-title>
-            </mat-expansion-panel-header>
+        <form [formGroup]="form" (ngSubmit)="submit()">
+            <mat-expansion-panel class="mat-elevation-z0">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>Create new game</mat-panel-title>
+                </mat-expansion-panel-header>
 
-            <mat-form-field>
-                <mat-label>Configuration</mat-label>
-                <mat-select>
-                    <mat-option>a</mat-option>
-                </mat-select>
-            </mat-form-field>
+                <mat-form-field *ngIf="configurations">
+                    <mat-label>Configuration</mat-label>
+                    <mat-select formControlName="configuration">
+                        <mat-option *ngFor="let configuration of configurations"
+                                    [value]="configuration.id"
+                        >
+                            {{ configuration.name }} - {{ configuration.description }}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
 
-            <mat-action-row>
-                <button mat-button
-                        color="accent"
-                >
-                    Create
-                </button>
-            </mat-action-row>
-        </mat-expansion-panel>
+                <mat-action-row>
+                    <button type="submit"
+                            mat-raised-button
+                            color="accent"
+                            [disabled]="form.invalid"
+                    >
+                        Create
+                    </button>
+                </mat-action-row>
+            </mat-expansion-panel>
+        </form>
     </mat-card-content>
 </mat-card>
