[Update] Add anchor emoji next to name

--- a/resources/angular/src/app/app.component.html
+++ b/resources/angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span>Deeplomacy</span>
+    <span>⚓ Deeplomacy</span>
 </mat-toolbar>
 <div class="layout">
     <router-outlet></router-outlet>
