[Feature] Change Game controller from HTML to JSON controller

--- a/resources/angular/src/app/components/create-game-form/create-game-form.component.html
+++ b/resources/angular/src/app/components/create-game-form/create-game-form.component.html
@@ -10,7 +10,7 @@
                     <mat-label>Configuration</mat-label>
                     <mat-select formControlName="configuration">
                         <mat-option *ngFor="let configuration of configurations"
-                                    [value]="configuration.id"
+                                    [value]="configuration"
                         >
                             {{ configuration.name }} - {{ configuration.description }}
                         </mat-option>
