--- a/resources/angular/src/app/pages/games-index/games-index.component.scss
+++ b/resources/angular/src/app/pages/games-index/games-index.component.scss
@@ -1,6 +1,11 @@
-mat-card {
-    max-width: 50em;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2em;
+.container {
+    padding-top: 2em;
+    padding-bottom: 2em;
+
+    mat-card {
+        max-width: 50em;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 2em;
+    }
 }
