--- a/resources/angular/src/app/pages/play/play.component.html
+++ b/resources/angular/src/app/pages/play/play.component.html
@@ -1,1 +1,4 @@
-<app-map *ngIf="grid" [grid]="grid"></app-map>
+<app-map *ngIf="grid && mySubmarine"
+         [grid]="grid"
+         [mySubmarine]="mySubmarine"
+></app-map>
