[Feature] Ability to send move request from frontend

--- a/resources/angular/src/app/components/map/map.component.html
+++ b/resources/angular/src/app/components/map/map.component.html
@@ -9,10 +9,16 @@
                         color="primary"
                 >
                     <span class="icon">⚓</span>
+                    <span class="tooltip-container">
+                        <span class="tooltip">
+                            You
+                        </span>
+                    </span>
                 </button>
                 <button *ngIf="getCellType(cell) === 'reachable'"
                         mat-flat-button
                         color="primary"
+                        (click)="emitMove(cell)"
                 >
                     <span class="tooltip-container">
                         <span class="tooltip">
