--- a/resources/angular/src/app/pages/play/play.component.html
+++ b/resources/angular/src/app/pages/play/play.component.html
@@ -2,4 +2,6 @@
          [grid]="grid"
          [mySubmarine]="mySubmarine"
          (move)="moveTo($event)"
+         (attack)="attack($event)"
+         (shareSonar)="shareSonar($event)"
 ></app-map>
