[Feature] Can send request to give action points

--- a/resources/angular/src/app/pages/play/play.component.html
+++ b/resources/angular/src/app/pages/play/play.component.html
@@ -4,4 +4,5 @@
          (move)="moveTo($event)"
          (attack)="attack($event)"
          (shareSonar)="shareSonar($event)"
+         (giveActionPoints)="giveActionPoints($event)"
 ></app-map>
