--- a/resources/angular/src/app/pages/games-index/games-index.component.scss
+++ b/resources/angular/src/app/pages/games-index/games-index.component.scss
@@ -7,5 +7,10 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 2em;
+
+        mat-card-content {
+            max-height: 30em;
+            overflow: auto;
+        }
     }
 }
