[Feature] Add empty state text for games index

--- a/resources/angular/src/app/pages/games-index/games-index.component.html
+++ b/resources/angular/src/app/pages/games-index/games-index.component.html
@@ -34,6 +34,10 @@
                 <mat-header-row *matHeaderRowDef="['configuration', 'players', 'actions']"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: ['configuration', 'players', 'actions']"></mat-row>
             </mat-table>
+
+            <div class="empty-state">
+                There are no games at this moment.
+            </div>
         </mat-card-content>
     </mat-card>
 
