--- a/resources/angular/src/app/pages/games-index/games-index.component.html
+++ b/resources/angular/src/app/pages/games-index/games-index.component.html
@@ -5,7 +5,7 @@
         </mat-card-header>
 
         <mat-card-content>
-            <mat-table [dataSource]="games">
+            <mat-table *ngIf="games" [dataSource]="games">
                 <ng-container matColumnDef="configuration">
                     <mat-header-cell *matHeaderCellDef>Configuration</mat-header-cell>
                     <mat-cell *matCellDef="let game">
@@ -35,7 +35,7 @@
                 <mat-row *matRowDef="let row; columns: ['configuration', 'players', 'actions']"></mat-row>
             </mat-table>
 
-            <div class="empty-state">
+            <div class="empty-state" *ngIf="games?.length === 0">
                 There are no games at this moment.
             </div>
         </mat-card-content>
