[Update] Make deeplomacy header link to home

--- a/resources/angular/src/app/app.component.html
+++ b/resources/angular/src/app/app.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar color="primary">
-    <span>⚓ Deeplomacy</span>
+    <a routerLink="/">⚓ Deeplomacy</a>
 </mat-toolbar>
 <router-outlet></router-outlet>
