--- a/resources/angular/src/app/pages/play/play.component.scss
+++ b/resources/angular/src/app/pages/play/play.component.scss
@@ -3,3 +3,9 @@ mat-spinner {
     margin-right: auto;
     margin-top: 5em;
 }
+
+.overlay {
+    position: absolute;
+    right: 2em;
+    bottom: 2em;
+}
