--- a/resources/angular/src/app/components/map/map.component.html
+++ b/resources/angular/src/app/components/map/map.component.html
@@ -8,8 +8,6 @@
                   class="cell"
             >
                 <button *ngIf="getCellType(cell) === 'me'"
-                        mat-flat-button
-                        color="primary"
                         class="cell-button"
                 >
                     <span class="icon">⚓</span>
@@ -20,8 +18,6 @@
                     </span>
                 </button>
                 <button *ngIf="getCellType(cell) === 'reachable'"
-                        mat-flat-button
-                        color="primary"
                         class="cell-button move"
                         (click)="emitMove(cell)"
                 >
@@ -32,9 +28,7 @@
                     </span>
                 </button>
                 <button *ngIf="getCellType(cell) === 'submarine'"
-                        mat-flat-button
-                        color="accent"
-                        class="cell-button"
+                        class="cell-button enemy"
                         (click)="submarineForMenu = cell.submarine"
                 >
                     <span class="icon">⚓</span>
@@ -73,12 +67,10 @@
                 </span>
                 </button>
                 <button *ngIf="getCellType(cell) === 'unreachable'"
-                        mat-raised-button
                         disabled
-                        class="cell-button"
+                        class="cell-button unreachable"
                 ></button>
                 <button *ngIf="getCellType(cell) === 'invisible'"
-                        mat-stroked-button
                         disabled
                         class="cell-button"
                 ></button>
