--- a/resources/angular/src/app/components/map/map.component.scss
+++ b/resources/angular/src/app/components/map/map.component.scss
@@ -6,6 +6,10 @@
     right: 0;
     overflow: scroll;
 
+    button {
+
+    }
+
     &.loading {
         cursor: wait;
 
@@ -25,8 +29,35 @@
 
         .row {
             button.cell-button {
-                width: 5em !important;
-                height: 5em !important;
+                font-family: Roboto, "Helvetica Neue", sans-serif;
+                font-size: 14px;
+                font-weight: 500;
+
+                box-sizing: border-box;
+                user-select: none;
+                cursor: pointer;
+                outline: none;
+                border: none;
+                display: inline-block;
+                white-space: nowrap;
+                text-decoration: none;
+                vertical-align: middle;
+                text-align: center;
+                line-height: 36px;
+                padding: 0 16px;
+                border-radius: 4px;
+                overflow: visible;
+
+                background-color: #3f51b5;
+                color: white;
+
+                &:disabled {
+                    cursor: inherit;
+                    background-color: grey;
+                }
+
+                width: 5em;
+                height: 5em;
                 margin: .5em;
 
                 position: relative;
@@ -38,6 +69,15 @@
                         transform: translate(.3em, -.3em);
                         transition: transform .2s;
                     }
+                }
+
+                &.enemy {
+                    background-color: red;
+                }
+
+                &.unreachable {
+                    background: transparent;
+                    border: 1px solid grey;
                 }
 
                 .icon {
