[Feature] Button to abandon running game

--- a/resources/angular/src/app/pages/games-index/games-index.component.html
+++ b/resources/angular/src/app/pages/games-index/games-index.component.html
@@ -29,13 +29,23 @@
                         >
                             Join
                         </button>
-                        <button mat-raised-button
-                                color="accent"
-                                *ngIf="game.isJoined"
-                                (click)="play(game)"
-                        >
-                            Continue
-                        </button>
+                        <ng-container *ngIf="game.isJoined">
+                            <button mat-raised-button
+                                    color="accent"
+                                    *ngIf="game.isJoined"
+                                    (click)="play(game)"
+                            >
+                                Continue
+                            </button>
+
+                            <button mat-raised-button
+                                    color="warn"
+                                    *ngIf="game.isJoined"
+                                    (click)="abandon(game)"
+                            >
+                                Abandon
+                            </button>
+                        </ng-container>
                     </mat-cell>
                 </ng-container>
 
