--- a/resources/angular/src/app/pages/games-index/games-index.component.scss
+++ b/resources/angular/src/app/pages/games-index/games-index.component.scss
@@ -21,6 +21,10 @@
                 text-align: center;
                 padding: 3em;
             }
+
+            mat-cell button {
+                margin-right: .5em;
+            }
         }
     }
 }
